<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />

    <group android:menuCategory="container">
        <item
            android:id="@+id/action_set_list_view"
            android:icon="@drawable/ic_list_view"
            android:title="@string/list"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_set_grid_view"
            android:icon="@drawable/ic_grid_view"
            android:title="@string/grid"
            app:showAsAction="ifRoom" />
    </group>

</menu>